--- a/app/src/main/res/layout/activity_restaurant_detail.xml
+++ b/app/src/main/res/layout/activity_restaurant_detail.xml
@@ -172,37 +172,14 @@
         app:layout_constraintTop_toTopOf="@+id/restaurantdetail_imageview_plus"
         app:srcCompat="@drawable/restaurantdetail_plus" />
 
-    <ImageView
-        android:id="@+id/restaurantdetail_imageview_laporkanpengguna"
-        android:layout_width="210dp"
-        android:layout_height="48dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="49dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/restaurantdetail_laporkan" />
-
-    <TextView
-        android:id="@+id/textView10"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="13dp"
-        android:fontFamily="@font/poppins_bold"
-        android:text="Laporkan Pengguna"
-        android:textColor="#E2E3E6"
-        app:layout_constraintStart_toStartOf="@+id/restaurantdetail_imageview_laporkanpengguna"
-        app:layout_constraintTop_toTopOf="@+id/restaurantdetail_imageview_laporkanpengguna" />
-
-    <ImageView
-        android:id="@+id/imageView22"
-        android:layout_width="16dp"
-        android:layout_height="16dp"
-        android:layout_marginStart="7dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintStart_toEndOf="@+id/textView10"
-        app:layout_constraintTop_toTopOf="@+id/restaurantdetail_imageview_laporkanpengguna"
-        app:srcCompat="@drawable/restaurantdetail_danger" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/restaurantdetail_recyclerview_review"
+        android:layout_width="330dp"
+        android:layout_height="107dp"
+        android:layout_marginStart="41dp"
+        android:layout_marginTop="18dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/restaurantdetail_textview_review" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
